--- a/styles/pages/Login.module.scss
+++ b/styles/pages/Login.module.scss
@@ -4,14 +4,13 @@
   background-color: $primary-80;
   max-width: 70%;
   padding: 1em 2em;
-  font-size: 2em;
   border-radius: 1em;
   box-shadow: 0 0.25em 1em $highlight;
 
   h1 {
     color: $highlight;
     text-decoration: underline;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
   }
 }
 
